--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,18 +3,29 @@
 
 # You can set these variables from the command line, and also
 # from the environment for the first two.
-SPHINXOPTS    ?=
-SPHINXBUILD   ?= sphinx-build
-SOURCEDIR     = .
-BUILDDIR      = _build
+SPHINX     ?= sphinx-build
+SPHINXOPTS ?=
+DOCDIR     = .
+BUILDDIR   = _build
+APIDIR     = _api
+
+# Remember add the environment variable to readthedocs.org!!!
+ENV = SPHINX_APIDOC_OPTIONS=members,show-inheritance
 
 # Put it first so that "make" without argument is like "make help".
 help:
-	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	@$(SPHINX) -M help "$(DOCDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+.PHONY: help Makefile clean serve
+
+clean: Makefile
+	@$(SPHINX) -M $@ "$(DOCDIR)" "$(BUILDDIR)" $(SPHINXOPTS)
+	@$(SPHINX) -M $@ "$(DOCDIR)" "$(APIDIR)"   $(SPHINXOPTS)
+
+serve:
+	( cd $(BUILDDIR)/html/ && python3 -m http.server 8080 )
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
-	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	@$(ENV) $(SPHINX) -M $@ "$(DOCDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
