Add support to more task models.

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,6 +9,9 @@ tox:
 tox-v:
 	NO_COV= $(TOX) -e py{36,37,38} -- -v
 
+tox-vv:
+	NO_COV= $(TOX) -e py36 -- -vv
+
 tox-report:
 	- $(TOX) -p -e clean,py36,report -- --cov-append
 	python3.7 -m http.server --directory .test/htmlcov/ 3000
