Update unit test.

--- a/test/tox.ini
+++ b/test/tox.ini
@@ -4,12 +4,14 @@ skipsdist = true
 
 [testenv]
 changedir = .test
+setenv =
+	PYTHONPATH = {env:PYTHONPATH:}{:}{toxinidir}/..
 
 deps =
 	pytest
 	pytest-cov
 	pytest-xdist
-	-rrequirements.txt
+	-r ../requirements.txt
 
 depends =
 	py{36,37,38}: clean
