Support HuggingFace's transformers v4.

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,16 +4,16 @@ TOX = tox
 .PHONY: tox tox-v tox-report clean
 
 tox:
-	NO_COV= $(TOX) -p -e py{36,37,38} --
+	NO_COV= $(TOX) -p -e py36-hf{3,4} --
 
 tox-v:
-	NO_COV= $(TOX) -e py{36,37,38} -- -v
+	NO_COV= $(TOX) -e py36-hf{3,4} -- -v
 
 tox-vv:
-	NO_COV= $(TOX) -e py36 -- -vv
+	NO_COV= $(TOX) -e py36-hf4 -- -vv
 
 tox-report:
-	- $(TOX) -p -e clean,py36,report -- --cov-append
+	- $(TOX) -p -e clean,py36-hf4,report -- --cov-append
 	python3.7 -m http.server --directory .test/htmlcov/ 3000
 
 clean:
