--- a/test/tox.ini
+++ b/test/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py{36,37,38},report
+envlist = clean,py{36,37,38}-hf{3,4},report
 skipsdist = true
 
 [testenv]
@@ -11,11 +11,13 @@ deps =
 	pytest
 	pytest-cov
 	pytest-xdist
-	-r ../requirements.txt
+	-r ./requirements.txt
+	hf3: transformers>=3.5,<4
+	hf4: transformers>=4
 
 depends =
-	py{36,37,38}: clean
-	report: py{36,37,38}
+	py{36,37,38}-hf{3,4}: clean
+	report: py{36,37,38}-hf{3,4}
 
 [testenv:report]
 deps = coverage
@@ -30,6 +32,6 @@ skip_install = true
 commands =
 	coverage erase
 
-[testenv:py{36,37,38}]
+[testenv:py36-hf{3,4}]
 commands =
 	pytest {toxinidir}/script/nlp/run.py {env:NO_COV:--cov=ckip_transformers.nlp} {posargs}
