Transformers v3 is not compatible with torch 1.8.

--- a/test/tox.ini
+++ b/test/tox.ini
@@ -13,7 +13,9 @@ deps =
 	pytest-xdist
 	-r ./requirements.txt
 	hf3: transformers>=3.5,<4
+	hf3: torch<1.8
 	hf4: transformers>=4
+	hf4: torch
 
 depends =
 	py{36,37,38}-hf{3,4}: clean
