--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,11 +15,12 @@ sphinx:
 #  configuration: mkdocs.yml
 
 # Optionally build your docs in additional formats such as PDF and ePub
-formats: all
+formats:
+  - htmlzip
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.6
+  version: "3.6"
   install:
     - requirements: docs/requirements.txt
     - requirements: requirements.txt
